--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<h1>look at jesus pieces new web site </h1>
-Hi
-AMAA QUE NOO
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <title>welcome to jesuspieces brand new website</title>
+ </head>
+ <body>
+  <h1>Look around jesuspieces web page!!</h1>
+ </body>
+</html>
+my name is paul i love to eat and i love dairy  queen but i dont want to walk.
+<p>this is jesus new website it is really very cool.</p>
