--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <title>welcome to jesuspieces brand new website</title>
+  <title>jjesuspieces</title>
  </head>
  <body>
-  <h1>Look around jesuspieces web page!!</h1>
- </body>
+ <span style="color:crimson">
+    <center><h1>Welcome, Look around jesuspieces web page!!</h1></center>
+ </span>
+</body>
 </html>
 my name is paul i love to eat and i love dairy  queen but i dont want to walk.
-<p>this is jesus new website it is really very cool.</p>
+<p style="font-weight:bold;font-style:italic;text-decoration:underline;text-align:center;color:pink;background:black">my name is paul i love to eat and i love dairy  queen but i dont want to walk..</p>
+
+
