--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
+   <link rel="stylesheet" href="styles.css">
   <title>jjesuspieces</title>
  </head>
  <body>
@@ -9,7 +10,7 @@
  </span>
 </body>
 </html>
-my name is paul i love to eat and i love dairy  queen but i dont want to walk.
-<p style="font-weight:bold;font-style:italic;text-decoration:underline;text-align:center;color:pink;background:black">my name is paul i love to eat and i love dairy  queen but i dont want to walk..</p>
 
+<p id="stylish">my name is jesus.</p>
+This is jesus first website
 
