--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
+  <script type="text/javascript" 
+            src="script.js">
+     </script>
    <link rel="stylesheet" href="styles.css">
   <title>jjesuspieces</title>
  </head>
- <body>
+ <body onclick="hello()">
  <span style="color:crimson">
     <center><h1>Welcome, Look around jesuspieces web page!!</h1></center>
  </span>
@@ -14,3 +17,20 @@
 <p id="stylish">my name is jesus.</p>
 This is jesus first website
 
+<div id="base">
+  <div id="background">
+    <div id="spookster">
+      <div id="peepers"></div>
+      <!-- Short for booplesnoot -->
+      <div id="snoot"></div>
+      <div id="left-waggler"></div>
+      <div id="right-waggler"></div>
+    </div>
+    <div id="feets">
+      <div id="feet"></div>
+      <div id="feet"></div>
+      <div id="feet"></div>
+      <div id="feet"></div>
+    </div>
+  </div>
+</div>
